--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 
 <!-- main section start -->
 <main>
-  <div class="container py-5">
+  <div class="container my-5">
     <div class="course_heading d-flex justify-content-center align-items-center flex-column text-center pb-5">
-    <h1>Our Popular Courses</h1>
+    <h1 class="mb-4">Our Popular Courses</h1>
     <p class="text-muted fs-6 w-50">Here is our all popular courses. You can buy our videos or can join our live classes. Select a course and see the details info when or how you can jon live sessions or videos. </p>
     </div>
     <div class="course_items">
@@ -257,12 +257,90 @@
            </div>
           </div>
         </div>
+        <!-- course section end -->
+    <!-- accorodian secation start -->
+    <section id="accorodian">
+      <div class="container my-5">
+        <div class="course_heading d-flex justify-content-center align-items-center flex-column text-center pb-5">
+          <h1 class="mb-4">Most Recent Questiones</h1>
+          <p class="text-muted fs-6 w-50">Here is some of questiones which are frequently asked by students.If you have any question asked here we will try to answer as soon as possible. </p>
+          </div>
+          <!-- accorodien heding closed -->
+          <!-- question start -->
+          <div class="accordion w-75 m-auto" id="accordionExample">
+            <!-- question 1 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <strong>What is the deffrences between display grid and display flex?</strong>
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p>Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can work on either row or columns at a time, but Grids can work on both. Flexbox, gives you more flexibility while working on either element (row or column). HTML markup and CSS will be easy to manage in this type of scenario.</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- question 2 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <strong>What is the deffrences between bootstrap and tailwend framwork?</strong>
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p>Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that makes them look identical.</p>
+                </div>
+              </div>
+            </div>
+            <!-- question 3 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <strong>What is CSS box model?</strong>
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p>In web development, the CSS box model refers to how HTML elements are modeled in the browser engine and how the dimensions of those HTML elements are derived from CSS properties. This is a basic concept for structuring HTML webpages.</p>
+                </div>
+              </div>
+            </div>
+            <!-- question 4 -->
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFour">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  <strong>What is simantic tags?</strong>
+                </button>
+              </h2>
+              <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <p>Semantic HTML elements are those that clearly describe their meaning in a human- and machine-readable way. Elements such as header , footer and article are all considered semantic because they accurately describe the purpose of the element and the type of content that is inside them.</p>
+                </div>
+              </div>
+            </div>
+             <!-- question end -->
+          </div>
+
+
+         
+
+
+      </div>
+      
+
+    </section> 
+  <!-- accorodian section end -->
 
 </main>
 <!-- main section end -->
 <!-- footer section start -->
 <footer>
-
+<section id="footer section">
+  
+</section>
 </footer>
 <!-- footer section end -->
 
