--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Learn with Fun</title>
+  <!-- favicon link -->
+  <link rel="shortcut icon" href="#" type="image/x-icon">
+  <!-- font-awesome cdn link -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- bs-5 cdn link -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
   <!-- custom stylesheet link -->
@@ -339,7 +343,18 @@
 <!-- footer section start -->
 <footer>
 <section id="footer section">
-  
+  <div class="container-fluid bg-dark p-5 text-center text-light">
+    <h3><span class="text-danger">Edu</span>-Life</h3>
+    <p>B.M college road, Barsal</p>
+    <a class="text-decoration-none text-light" href="">Privecy Policy</a><span class="text-danger mx-3">&rarr;</span><a class="text-decoration-none text-light" href="">Terms of use</a>
+    <div class="sm_icons my-3">
+      <a href=""><i class="text-light p-2  fs-3  fa-brands fa-facebook"></i></a>
+      <a href=""><i class="text-light p-2  fs-3   fa-brands fa-linkedin-in"></i></a>
+      <a href=""><i class="text-light p-2  fs-3   fa-brands fa-tiktok"></i></a>
+      <a href=""><i class="text-light p-2  fs-3   fa-brands fa-twitter"></i></a>
+    </div>
+    
+  </div>
 </section>
 </footer>
 <!-- footer section end -->
