modal eddited for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -264,13 +264,14 @@
         <!-- course section end -->
    <!-- join section start -->
     <section id="joining_section">
-      <div class="container rounded-3 d-flex flex-lg-row justify-content-around p-5 bg-danger text-white">
+      <div class=" card container bg-danger rounded-3">
+        <div class="card-body text-white  d-lg-flex  justify-content-lg-between p-5">
         <div class="info_content ">
-          <h2 class="fs-1 bolder">Ready to Join?</h2>
-          <p class="w-75 mt-3 fs-6"> If you want to join a course please submit your about info. So that we can verify you identy.</p>
+          <h5 class=" card-title fs-3 bolder">Ready to Join?</h5>
+          <p class="card-text w-75 my-3 fs-6"> If you want to join a course please submit your about info. So that we can verify you identy.</p>
         </div>
         <!-- buttons -->
-        <div class="form_btn d-flex align-items-center ">
+        <div class="form_btn d-flex mt-sm-5 mt-lg-0 align-items-center ">
           <!-- buttons for sighn up -->
           <button type="button" class="btn btn-light btn-lg text-danger" data-bs-toggle="modal" data-bs-target="#register_page">
             Register Now
@@ -311,10 +312,11 @@
               </div>
             </div>
           </div>
+         </div>
         </div>
       </div>
     </div>
-    </section>
+  </section>
 
 <!-- join section end -->
 <!-- trial section -->
