sponser section added

--- a/index.html
+++ b/index.html
@@ -407,6 +407,49 @@
 
     </section> 
   <!-- accorodian section end -->
+  <!-- sponser section start -->
+
+    <div id="sponser_section">
+      <div class="container my-5">
+        <h1 class="text-center fw-bolder mb-5">Trusted by over 500+ companies</h1>
+        <div class="row  d-flex justify-content-center align-items-center">
+          <div class="col-2  ">
+            <div class="companies gx-5">
+              <img src="images/company/company-1.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-2  ">
+            <div class="companies gx-5">
+              <img src="images/company/company-2.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-2  ">
+            <div class="companies gx-5">
+              <img src="images/company/company-3.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-2  ">
+            <div class="companies gx-5">
+              <img src="images/company/company-4.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-2  ">
+            <div class="companies gx-5">
+              <img src="images/company/company-5.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-2  ">
+            <div class="companies gx-5">
+              <img src="images/company/company-6.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          
+          
+        </div>
+      </div>
+    </div>
+
+  <!-- sponser section start -->
 
 </main>
 <!-- main section end -->
