--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@
           </div>
         </div>
         <!-- course section end -->
+   <!-- Exporring institute start -->
+   
+   <!-- Exporring institute end -->
    <!-- join section start -->
     <section id="joining_section">
       <div class=" card container bg-danger rounded-3">
