explore section added

--- a/index.html
+++ b/index.html
@@ -263,11 +263,48 @@
         </div>
         <!-- course section end -->
    <!-- Exporring institute start -->
-   
+    <section>
+      <div class="container my-5">
+        <div class="card mb-3 border-0 shadow-lg" >
+          <div class="row g-0">
+            <div class="col-md-5">
+              <img src="images/man with laptop.jpg" class="explore_img rounded-start" alt="...">
+            </div>
+            <div class="col-md-7 align-self-center">
+              <div class="card-body p-5  ">
+                <div class="card_content my-4">
+                  <h1 class="card-title mb-3">Explore Our E-Learning Institute On Internet</h1>
+                <p class="card-text text-muted">We provides the best guiedline and supports in city. If you want to learn with e-education we are uncomparable.You are the decission maker we are the life changers. <br><br> Just select a course we will teach you how to learn and you will learn with fun.We changes lots of peoples life styles..are you the next one??/ </p>
+                </div>
+                <div class="card_details mt-3">
+                  <div class="institute_info d-flex ">
+                    <div class="course_info me-5">
+                      <h1>3.2k+</h1>
+                      <p class="text-muted">Online Course</p>
+                    </div>
+                    <div class="course_info me-5">
+                      <h1>500+</h1>
+                      <p class="text-muted">Expart Members</p>
+                    </div>
+                    <div class="course_info">
+                      <h1>900+</h1>
+                      <p class="text-muted">Ratings & Reviews</p>
+                    </div>
+                  </div>
+                  <button class="btn btn-danger">Read More</button>
+                </div>
+                
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
    <!-- Exporring institute end -->
    <!-- join section start -->
     <section id="joining_section">
-      <div class=" card container bg-danger rounded-3">
+      <div class=" card container my-5 bg-danger rounded-3">
         <div class="card-body text-white  d-lg-flex  justify-content-lg-between p-5">
         <div class="info_content ">
           <h5 class=" card-title fs-3 bolder">Ready to Join?</h5>
@@ -413,7 +450,7 @@
   <!-- sponser section start -->
 
     <div id="sponser_section">
-      <div class="container my-5">
+      <div class="container my-5 d-none d-lg-block">
         <h1 class="text-center fw-bolder mb-5">Trusted by over 500+ companies</h1>
         <div class="row  d-flex justify-content-center align-items-center">
           <div class="col-2  ">
