--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="course_items">
       <div class="row">
         <!-- course 1 start -->
-        <div class="col-sm-12 col-md-6">
+        <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0 align-items-center justify-content-center">
               <div class="col-md-4">
@@ -160,7 +160,7 @@
             </div>
             <!-- course 1 end -->
             <!-- course 2 start -->
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-12 col-lg-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0 align-items-center justify-content-center">
                   <div class="col-md-4">
@@ -179,7 +179,7 @@
                 </div>
             <!-- course 2 end -->
             <!-- course 3 start -->
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-12 col-lg-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0 align-items-center justify-content-center">
                   <div class="col-md-4">
@@ -198,7 +198,7 @@
                 </div>
             <!-- course 3 end -->
             <!-- course 4 start -->
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-12 col-lg-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0 align-items-center justify-content-center">
                   <div class="col-md-4">
@@ -217,7 +217,7 @@
                 </div>
             <!-- course 4 end -->
             <!-- course 5 start -->
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-12 col-lg-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0 align-items-center justify-content-center">
                   <div class="col-md-4">
@@ -236,7 +236,7 @@
                 </div>
             <!-- course 5 end -->
             <!-- course 6 start -->
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-12 col-lg-6">
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0 align-items-center justify-content-center">
                   <div class="col-md-4">
@@ -359,19 +359,9 @@
   </section>
 
 <!-- join section end -->
-<!-- trial section -->
-<!-- <div class="card container">
-  <div class="card-body d-lg-flex justify-content-lg-between p-5">
-    <div class="content_a">
-      <h5 class="card-title">Ready to Join?</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="content_b">
-      <a href="#" class="btn btn-primary">Button</a>
-    </div>
-  </div>
-</div> -->
-<!-- trail end -->
+   <!-- sucessfull student section start -->
+  
+   <!-- sucessfull student section end -->
     <!-- accorodian secation start -->
     <section id="accorodian">
       <div class="container my-5">
