--- a/index.html
+++ b/index.html
@@ -488,13 +488,14 @@
 <section id="footer section">
   <div class="container-fluid bg-dark p-5 text-center text-light">
     <h3><span class="text-danger">Edu</span>-Life</h3>
-    <p>B.M college road, Barsal</p>
+    <p>B.M college road, Barisal</p>
     <a class="text-decoration-none text-light" href="">Privecy Policy</a><span class="text-danger mx-3">&rarr;</span><a class="text-decoration-none text-light" href="">Terms of use</a>
     <div class="sm_icons my-3">
-      <a href=""><i class="text-light p-2  fs-3  fa-brands fa-facebook"></i></a>
-      <a href=""><i class="text-light p-2  fs-3   fa-brands fa-linkedin-in"></i></a>
-      <a href=""><i class="text-light p-2  fs-3   fa-brands fa-tiktok"></i></a>
-      <a href=""><i class="text-light p-2  fs-3   fa-brands fa-twitter"></i></a>
+      <a target="_blank" href="https://web.facebook.com/profile.php?id=100011933430598"><i class="text-light p-2  fs-3  fa-brands fa-facebook"></i></a>
+      <a target="_blank" href="https://www.linkedin.com/in/ridoy-khan-06b389244/"><i class="text-light p-2  fs-3   fa-brands fa-linkedin-in"></i></a>
+      <a target="_blank" href="https://www.twitter.com"><i class="text-light p-2  fs-3   fa-brands fa-twitter"></i></a>
+      <a target="_blank" href="https://www.tiktok.com"><i class="text-light p-2  fs-3   fa-brands fa-tiktok"></i></a>
+      
     </div>
     
   </div>
